--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .App-logo {
@@ -8,14 +9,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: black;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  /*align-items: center;*/
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 120px;
 }
 
 .App-link {
@@ -29,4 +31,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.cover{
+  position: absolute;
+  top: 10px;
+  left: -110px;
 }
